package message;

message MoveButton {
  required int32 Pos = 1;
}

message JoinTable {
  required string Player = 1;
  required int32 Pos = 2;
  required double Amount = 3;
}

message LeaveTable {
  required string Player = 1;
}

message SitOut {
  required int32 Pos = 1;
}

message ComeBack {
  required int32 Pos = 1;
}
